# haskell-wasm

./: .gitignore  .gitmodules  LICENSE  README.md  package.yaml  stack.yaml  wasm.cabal
exec/: Main.hs
exec/Wasm/: WasmParser.hs
src/Language/: Wasm.hs
src/Language/Wasm/: AST.hs  Binary.hs  Builder.hs  FloatUtils.hs  Interpreter.hs  Lexer.x  Parser.y  Script.hs  Structure.hs  Validate.hs
tests/: Test.hs
tests/runnable/: index.html
tests/samples/: align.wast  block.wast  br.wast  br_if.wast  br_table.wast  call.wast  call_indirect.wast  comments.wast  conversions.wast  f64.wast  fact.wast  float_misc.wast  func.wast  func_ptrs.wast  i64.wast  if.wast  import.wast  imports.wast  labels.wast  loop.wast  mod.wast  mod2.wast  stack.wast
