name:           wasm
version:        1.0.1
author:         Ilya Rezvov
maintainer:     Ilya Rezvov <rezvov.ilya@gmail.com>
license:        MIT
license-file:   LICENSE
category:       Compilers/Interpreters
homepage:       https://github.com/SPY/haskell-wasm/
bug-reports:    https://github.com/SPY/haskell-wasm/issues
synopsis:       WebAssembly Language Toolkit and Interpreter
description:    This package contains fully spec-compatible tooling for WebAssembly.
                Features include:
                .
                * WebAssembly Text Representation Parser
                .
                * WebAssembly Binary Representation encoder and decoder
                .
                * Spec-compatible Module validator (checked with Spec Core Test Suite)
                .
                * Spec-compatible Interpreter (checked with Spec Core Test Suite)
                .
                * Extended scipting grammar parser and executor
                .
                * WebAssembly Module building eDSL
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    src/Language/Wasm/Lexer.x
    src/Language/Wasm/Parser.y

library
  hs-source-dirs:
      src
  ghc-options: -Wwarn -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:
      array >=0.5 && <0.6
    , base >=4.6 && <5.0
    , bytestring >=0.10
    , containers >=0.5 && <0.6
    , mtl >=2.2 && <3.0
    , text >=1.1
    , transformers >=0.4 && <0.6
    , utf8-string >=1.0
    , cereal >= 0.5
    , vector >= 0.12
    , ieee754 >= 0.8
    , deepseq >= 1.4
  build-tools:
      alex >=3.1.3
    , happy >=1.9.4
  exposed-modules:
      Language.Wasm.Lexer
      Language.Wasm.Parser
      Language.Wasm.Structure
      Language.Wasm.Binary
      Language.Wasm.Validate
      Language.Wasm.Interpreter
      Language.Wasm.Script
      Language.Wasm.FloatUtils
      Language.Wasm.Builder
      Language.Wasm
  other-modules:
      Paths_wasm
  default-language: Haskell2010

executable wasm-bin
  main-is: Main.hs
  hs-source-dirs: exec
  build-depends:
      base >=4.6 && <5.0
    , wasm
    , optparse-applicative >= 0.14
    , bytestring >=0.10 && <0.11
    , base64-bytestring >= 1.0
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      tests
  build-depends:
      base >=4.6 && <5.0
    , bytestring >=0.10 && <0.11
    , filepath >=1.3 && <1.5
    , directory >= 1.3
    , mtl ==2.2.1
    , tasty >=0.7
    , tasty-hunit >=0.4.1 && <0.10
    , text >=1.1 && <1.3
    , wasm
  build-tools:
      alex >=3.1.3
    , happy >=1.9.4
  other-modules:
      Paths_wasm
  default-language: Haskell2010
